syntax = "proto3";

package cardano;

message BlockId {
    bytes id = 1;
}

message BlockIds {
    repeated bytes ids = 1;
}

message BlockDate {
    bytes content = 1;
}

message Block {
    bytes content = 1;
}

message Header {
    bytes content = 1;
}

message Transaction {
    bytes content = 1;
}